--- a/index.html
+++ b/index.html
@@ -7,65 +7,184 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-      <h1>Welcome to Simple Website Flow ✨</h1>
-      <h2>Sites That Sell — with Soul, Strategy & Simplicity</h2>
-    </header>
-
     <main>
-      <section>
+      <section class="intro">
+        <h1>The Simple Flow to 4× Your Income</h1>
         <p>
-          What if your website wasn't just a website… <br />
-          But a <strong>portal</strong> to more clients, more income, and more
-          ease?
+          <strong>No fluff, no hype</strong> – just the 5 fundamentals you've
+          been overlooking that are holding back your next 4× month.
         </p>
 
         <p>
-          We build soulful systems that turn browsers into buyers — <br />
-          and help fun, friendly entrepreneurs like you multiply revenue<br />
-          through
-          <span style="color: #88c0d0"><strong>website magic</strong></span
-          >, <span style="color: #a3be8c"><strong>email flows</strong></span
-          >, and
-          <span style="color: #d08770"
-            ><strong>text opt-ins your clients actually enjoy</strong></span
-          >.
+          If you're like most business owners, you have the talent and the
+          drive. So why isn’t your income skyrocketing? The truth is,
+          sustainable high income isn’t about working <em>harder</em> or chasing
+          every shiny new strategy – it’s about nailing the basics that actually
+          <strong>build trust and connection</strong>. Websites, email
+          newsletters, text follow-ups, concierge-level service, personalized
+          offers – these aren’t just add-ons to think about “someday.” They’re
+          the core elements of a business primed to multiply its income with
+          ease.
         </p>
-
-        <a href="landingpage.html">
-          <button>✨ Let’s Multiply Your Magic ✨</button>
-        </a>
       </section>
 
-      <section style="margin-top: 3rem">
-        <h3>Real Results from Soulful Humans:</h3>
-        <blockquote>
-          “I got 4 new client calls in one week. It felt like my site just *got
-          me* — and helped them get me too.”<br />
-          — Jenna, Breathwork Facilitator
-        </blockquote>
-        <blockquote>
-          “It was like hiring a creative partner who codes. I finally felt like
-          I had a website I was proud to share.”<br />
-          — Kai, Coach & Energy Worker
-        </blockquote>
+      <section class="fundamentals">
+        <h2>5 “Nice-to-Haves” That Are Blocking Your 4× Growth</h2>
+        <ul>
+          <li>
+            <strong>Your Website:</strong> If your website doesn’t ask clear,
+            emotionally-resonant questions that show your visitor you
+            <em>understand their real goals</em> — and that you know how to help
+            them reach their <em>next big target</em> — then it’s not doing its
+            job. The right site isn’t about design flair. It’s about clarity,
+            empathy, and momentum.
+          </li>
+
+          <li>
+            <strong>Email Newsletters:</strong> Not only are you missing out on
+            nurturing and re-engaging your clients — you’re actually prolonging
+            the time they spend stuck, suffering without the solution you
+            already have. They’re waiting for you to show up and help. Regular,
+            caring emails shorten that distance.
+          </li>
+
+          <li>
+            <strong>Text Follow-Ups:</strong> A text from a trusted expert who
+            has your back — and the clarity to help? That’s rare. This is your
+            chance to be that person. Being personal, consistent, and kind goes
+            further than any automation. A text can change everything.
+          </li>
+
+          <li>
+            <strong>Concierge Service:</strong> High-paying clients want to be
+            treated like they matter — because they do. Quick replies,
+            personalized outreach, and guidance with heart creates a high-trust
+            bond. Concierge service turns uncertainty into yeses.
+          </li>
+
+          <li>
+            <strong>Personalized Offers:</strong> People don’t want generic.
+            They want to feel like your offer is <em>for them</em>. Because it
+            is. Show them that, and they’ll show up with money in hand — excited
+            to invest.
+          </li>
+        </ul>
+
+        <p>
+          <em>These five fundamentals are where real growth happens.</em> They
+          might seem basic, but getting them right is transformational. And
+          here’s the best part: you don’t need a complicated funnel or a huge ad
+          budget to leverage these – just a willingness to connect and the
+          courage to keep things simple.
+        </p>
       </section>
 
-      <section style="margin-top: 3rem">
-        <h3>Curious but not ready?</h3>
+      <section class="philosophy">
+        <h2>The Simple Website Flow: Built for Connection, Not Pressure</h2>
+        <ul>
+          <li>
+            <strong>Connection Over Pressure:</strong> We put relationships
+            first. That means real conversations with your audience instead of
+            aggressive sales funnels. Your highest-value clients aren’t won by
+            slick tactics; they come when they feel heard and understood. So we
+            help you build trust at every touchpoint – no sleazy tricks, no
+            high-pressure pushes.
+          </li>
+
+          <li>
+            <strong>Simplicity Over Complexity:</strong> Forget the marketing
+            circus of doing <em>everything</em> at once. We cut through the
+            noise and zero in on the critical pieces that drive growth. Simple
+            doesn’t mean small – it means focused and effective. (And simpler
+            systems = less stress for you. Win-win.)
+          </li>
+
+          <li>
+            <strong>Honest Guidance:</strong> We tell it like it is. No
+            sugar-coating, no false promises. If something isn’t working, you’ll
+            know. If something can be improved, we’ll show you how. This is
+            straight-shooting consulting meets concierge support. We’re here to
+            actually help you grow, not just nod and hand you a generic plan.
+          </li>
+
+          <li>
+            <strong>Long-Term Growth, Not Quick Fixes:</strong> While we love
+            helping you score quick wins, we’re really building the foundation
+            for <strong>sustainable</strong> success. Everything we set up –
+            your site, your follow-up flow, your client experience – is designed
+            to keep working for you next month, next year, and beyond.
+          </li>
+        </ul>
+
         <p>
-          We send playful emails with stories, experiments, and biz-shifting
-          ideas. You’ll also get our free guide:
-          <strong>“3 Website Shifts That Double Sales Instantly.”</strong>
+          In short, we keep it <strong>simple</strong>, we keep it
+          <strong>human</strong>, and we keep it <strong>real</strong>. When you
+          get these basics aligned, the momentum you’ll see in your business can
+          feel almost magical – but it’s <em>very</em> real and very much earned
+          through genuine connection and smart strategy.
         </p>
-        <a href="landingpage.html">
-          <button>Get the Free Guide + Join the Vibe</button>
-        </a>
+      </section>
+
+      <section class="invitation">
+        <h2>Is This You?</h2>
+        <ul>
+          <li>
+            <strong>Results-Driven & Ambitious:</strong> You have a big vision
+            and you’re ready to scale your income
+            <strong>without</strong> sacrificing your integrity or sanity.
+          </li>
+          <li>
+            <strong>Tired of Overwhelm:</strong> You crave clarity and a
+            step-by-step path that actually works for <em>you</em> and your
+            business.
+          </li>
+          <li>
+            <strong>Customer-Focused:</strong> You care deeply about your
+            clients and want a strategy that feels <em>good</em> to you and to
+            them.
+          </li>
+          <li>
+            <strong>Ready to Invest:</strong> You know your next leap requires
+            commitment, and you’re ready to step into a system that supports you
+            long-term.
+          </li>
+        </ul>
+
+        <p>Sound like you? Then you’re in the right place.</p>
+      </section>
+
+      <section class="cta">
+        <h2>Ready to Start a Real Conversation?</h2>
+        <p>
+          You’ve read this far, which means you’re ready for a shift. All it
+          takes to begin is a simple conversation. Whether you’re ready to go or
+          just curious, reach out.
+          <strong>No pressure, just possibility.</strong>
+        </p>
+
+        <form>
+          <input type="text" name="name" placeholder="Your Name" required />
+          <input type="email" name="email" placeholder="Your Email" required />
+          <input
+            type="tel"
+            name="phone"
+            placeholder="Your Phone Number"
+            required
+          />
+          <button type="submit">👉 Start the Conversation</button>
+        </form>
+
+        <p class="disclaimer">
+          No rush. No spam. Just friendly, real communication to help you make
+          your next big leap – at your own pace.
+        </p>
       </section>
     </main>
 
     <footer>
-      <p>&copy; 2025 Simple Website Flow — Sites That Sell with Soul</p>
+      <p>
+        &copy; 2025 Simple Website Flow – Built for connection, not pressure.
+      </p>
     </footer>
   </body>
 </html>
