--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           <strong>No pressure, just possibility.</strong>
         </p>
 
-        <form>
+        <form action="thankyou.html" method="POST">
           <input type="text" name="name" placeholder="Your Name" required />
           <input type="email" name="email" placeholder="Your Email" required />
           <input
