--- a/index.html
+++ b/index.html
@@ -162,7 +162,11 @@
           <strong>No pressure, just possibility.</strong>
         </p>
 
-        <form action="thankyou.html" method="POST">
+        <form
+          action="https://formspree.io/f/mblornyz"
+          method="POST"
+          id="index-form"
+        >
           <input type="text" name="name" placeholder="Your Name" required />
           <input type="email" name="email" placeholder="Your Email" required />
           <input
@@ -171,6 +175,21 @@
             placeholder="Your Phone Number"
             required
           />
+          <textarea
+            name="projectDetails"
+            placeholder="Tell us about your dream site, ideas, and goals..."
+            required
+            style="
+              width: 100%;
+              height: 180px;
+              font-size: 1rem;
+              padding: 1rem;
+              border-radius: 5px;
+              border: none;
+              resize: vertical;
+              margin-top: 1rem;
+            "
+          ></textarea>
           <button type="submit">👉 Start the Conversation</button>
         </form>
 
@@ -186,5 +205,27 @@
         &copy; 2025 Simple Website Flow – Built for connection, not pressure.
       </p>
     </footer>
+
+    <script>
+      const form = document.getElementById("index-form");
+      form.addEventListener("submit", async function (e) {
+        e.preventDefault();
+        const data = new FormData(form);
+        const res = await fetch(form.action, {
+          method: "POST",
+          body: data,
+          headers: {
+            Accept: "application/json",
+          },
+        });
+        if (res.ok) {
+          form.innerHTML =
+            "<p style='margin-top:2rem;'>Thanks! We'll reach out shortly. 🚀</p>";
+        } else {
+          form.innerHTML =
+            "<p style='margin-top:2rem;'>Something went wrong. Try again?</p>";
+        }
+      });
+    </script>
   </body>
 </html>
